--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1032,7 +1032,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
   <string name="label_campaign_reject">Please explore other campaigns to participate and earn.</string>
   <string name="label_campaign_proof_moderation">We will check your submitted proofs within 7 days. To add more, you can click below.</string>
-  <string name="label_campaign_proof_reject">Your proofs were rejected. Please check email for details.To resubmit after corrections, click below.</string>
+  <string name="label_campaign_proof_reject">Your Proofs were rejected. View rejection details and click below to re-submit the proofs.</string>
   <string name="toast_not_elegible">Sorry, you are not eligible for this campaign.</string>
   <string name="checking_elegiblity">We are checking your eligiblity</string>
   <string name="toast_campaign_full">Oops! Entries to this campaign are now closed.</string>
@@ -1056,7 +1056,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="detail_bottom_share">SHARE</string>
   <string name="payment_in_progress">PAYMENT IN PROCESS</string>
   <string name="detail_bottom_share_momspresso_reward">Share MyMoney</string>
-  <string name="detail_bottom_view_other">VIEW OTHER CAMPAIGNS</string>
+  <string name="detail_bottom_view_other">Your application was rejected. Please explore other campaigns to participate and earn.</string>
   <string name="payment_done">PAYMENT DONE</string>
 
   <string name="proof_sublitted">"PROOFS SUBMITTED"</string>
@@ -1397,6 +1397,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="invite_friends_whatsapp">Invite via whatsapp</string>
   <string name="share_app_msg">ಹಾಯ್! ಮಾಮ್ಸ್ಪ್ರೆಸ್ಸೋ ಆಪ್ ನೀವು ಬಳಸಿ! ಇಲ್ಲಿ ನಾನೂ ಕಥೆ, ಲೇಖನ,  ವಿಡಿಯೋಗಳ ಮೂಲಕ ನನ್ನ ಭಾವನೆಗಳನ್ನು,  ಪ್ರತಿಭೆಯನ್ನು ಅನಾವರಣಗೊಳಿಸುತ್ತೇನೆ. ಆಪ್  ಡೌನ್ಲೋಡ್ ಮಾಡಿ. %1s</string>
   <string name="invite_phone_contact">Invite contacts to follow you</string>
+  <string name="proof_rejection">Proof Rejection Details</string>
+  <string name="view_details">View details</string>
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
