--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -951,7 +951,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="label_campaign_completed">Congratulations! Your submission is approved. Your payment will be processed within 28 working days.</string>
   <string name="label_campaign_not_started">Campaign starts on </string>
 
-  <string name="label_campaign_reject">Please explore other campaigns to participate and earn.</string>
+  <string name="label_campaign_reject">Your application was rejected. Please explore other campaigns to participate and earn.</string>
   <string name="label_campaign_proof_moderation">We will check your submitted proofs within 7 days. To add more, you can click below.</string>
   <string name="label_campaign_proof_reject">Your Proofs were rejected. View rejection details and click below to re-submit the proofs.</string>
   <string name="toast_not_elegible">Sorry, you are not eligible for this campaign.</string>
@@ -977,7 +977,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="detail_bottom_share">SHARE</string>
   <string name="payment_in_progress">PAYMENT IN PROCESS</string>
   <string name="detail_bottom_share_momspresso_reward">Share MyMoney</string>
-  <string name="detail_bottom_view_other">Your application was rejected. Please explore other campaigns to participate and earn.</string>
+  <string name="detail_bottom_view_other">VIEW OTHER CAMPAIGNS</string>
   <string name="payment_done">PAYMENT DONE</string>
 
   <string name="proof_sublitted">"PROOFS SUBMITTED"</string>
@@ -1354,7 +1354,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="no_facebook_friends">None of your friends are logged into momspresso using facebook</string>
   <string name="share_app">షేర్ అప్</string>
   <string name="choose_proof">Choose Proof</string>
-  <string name="invite_friends_whatsapp">Invite via whatsapp</string>
+  <string name="invite_friends_whatsapp">వాట్సాప్ నుండి ఆహ్వానించండి</string>
   <string name="share_app_msg">హాయ్! కథలు మరియు వీడియోల ద్వారా నేను ఉపయోగించే Momspresso యాప్ ని  ఇపుడు డౌన్లోడ్ చేసుకోండి. %1s</string>
   <string name="invite_phone_contact">Invite contacts to follow you</string>
   <string name="proof_rejection">Proof Rejection Details</string>
