--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1383,4 +1383,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">विजेता</string>
+  <string name="all_first_vlog_upload">सबसे पहले अपना वी-लॉग  अपलोड करें </string>
+  <string name="winner_empty_state">यहां देखें सभी चैलेंजस के विजेता</string>
 </resources>
