--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1423,4 +1423,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">ਵਿਜੇਤਾ</string>
+  <string name="all_first_vlog_upload">ਸਭ ਤੋਂ ਪਹਿਲਾਂ ਆਪਣਾ ਵੀ-ਲੌਗ ਅਪਲੋਡ ਕਰੋ</string>
+  <string name="winner_empty_state">ਇੱਥੇ ਦੇਖੋ ਸਾਰੇ ਚੈਲੇਂਜਸ ਦੇ ਵਿਜੇਤਾ</string>
 </resources>
