--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1367,4 +1367,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">বিজেতা</string>
+  <string name="all_first_vlog_upload">সর্বপ্রথম আপনার ভিলগ আপলোড করুন</string>
+  <string name="winner_empty_state">এখানে দেখুন কারা হলেন চ্যালেঞ্জের বিজেতা</string>
 </resources>
