--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1474,4 +1474,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">વિજેતા</string>
+  <string name="all_first_vlog_upload">Be the first to upload your vlog!</string>
+  <string name="winner_empty_state">Watch this space for challenge winners announcement!</string>
 </resources>
