--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1360,4 +1360,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">विजेते</string>
+  <string name="all_first_vlog_upload">सगळ्यात प्रथम आपला व्हिलॉग अपलोड करा!</string>
+  <string name="winner_empty_state">इथे आपल्याला व्हिडिओ चॅलेंजचे विजेते बघता येतील</string>
 </resources>
