--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1358,4 +1358,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="share_the_app_via">Share the App via</string>
   <string name="all_phonebook">Phonebook</string>
   <string name="all_fb_msngr">Facebook Messenger</string>
+  <string name="all_winners">வெற்றியாளர்கள்</string>
+  <string name="all_first_vlog_upload">முதல் நபராக விலாகை பதிவேற்றுங்கள் !</string>
+  <string name="winner_empty_state">சவாலின் வெற்றியாளர்களைப் பற்றி இங்கே நீங்கள் அறிந்து கொள்ளலாம்!</string>
 </resources>
