--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1459,7 +1459,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="short_s_write">Write</string>
   <string name="ss_follow_author">Follow %1$s and check out other articles by her on Momspresso.\n %2$s</string>
   <string name="all_insta_share_clipboard_msg">Caption copied. Please paste before posting on Instagram.</string>
-  <string name="moderation_or_share_story_moderation_message">Your article is up for moderation. You\'ll receive an email within 24 hours regarding the status of the story.</string>
+  <string name="moderation_or_share_story_moderation_message">Your 100 word story is up for moderation. You\'ll receive an email within 24 hours regarding the status of the story.</string>
   <string name="ad.bottom_bar.instagram">INSTAGRAM</string>
   <string name="editor_minimum_word_limit">Please write at least %1$d words to continue</string>
   <string name="all_copy_link">COPY LINK</string>
