--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1409,4 +1409,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_winners">വിജയികൾ</string>
   <string name="all_first_vlog_upload">വ്ലോഗ് അപ്‌ലോഡ് ചെയ്യുന്ന ആദ്യത്തെ ആളാകൂ!</string>
   <string name="winner_empty_state">ചാലഞ്ച്വി വിജയികളെ ഇവിടെ അറിയാം!</string>
+  <string name="all_earlier">Earlier</string>
 </resources>
