--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1477,4 +1477,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_winners">વિજેતા</string>
   <string name="all_first_vlog_upload">Be the first to upload your vlog!</string>
   <string name="winner_empty_state">Watch this space for challenge winners announcement!</string>
+  <string name="all_earlier">Earlier</string>
 </resources>
