groups resources tab + vlogs winner tab stats

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1371,4 +1371,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_first_vlog_upload">সর্বপ্রথম আপনার ভিলগ আপলোড করুন</string>
   <string name="winner_empty_state">এখানে দেখুন কারা হলেন চ্যালেঞ্জের বিজেতা</string>
   <string name="all_earlier">Earlier</string>
+  <string name="all_resources">RESOURCES</string>
 </resources>
