--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1406,4 +1406,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_first_vlog_upload">ವ್ಲಾಗ್‌ ಅಪ್ಲೋಡ್‌ ಮಾಡುವ ಮೊದಲ ವ್ಯಕ್ತಿಯಾಗಿ!</string>
   <string name="winner_empty_state">ಚಾಲೆಂಜ್‌ ವಿನ್ನರ್‌ ಗಳ ವಿವರ ಇಲ್ಲಿ ಪ್ರಕಟಿಸಲಾಗುವುದು.</string>
   <string name="all_earlier">Earlier</string>
+  <string name="all_resources">RESOURCES</string>
 </resources>
