--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1427,4 +1427,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_first_vlog_upload">ਸਭ ਤੋਂ ਪਹਿਲਾਂ ਆਪਣਾ ਵੀ-ਲੌਗ ਅਪਲੋਡ ਕਰੋ</string>
   <string name="winner_empty_state">ਇੱਥੇ ਦੇਖੋ ਸਾਰੇ ਚੈਲੇਂਜਸ ਦੇ ਵਿਜੇਤਾ</string>
   <string name="all_earlier">Earlier</string>
+  <string name="all_resources">RESOURCES</string>
 </resources>
