--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1366,4 +1366,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_first_vlog_upload">Be the first to upload your vlog!</string>
   <string name="winner_empty_state">Watch this space for challenge winners announcement!</string>
   <string name="all_earlier">Earlier</string>
+  <string name="all_resources">RESOURCES</string>
 </resources>
