--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1372,4 +1372,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="winner_empty_state">এখানে দেখুন কারা হলেন চ্যালেঞ্জের বিজেতা</string>
   <string name="all_earlier">Earlier</string>
   <string name="all_resources">RESOURCES</string>
+  <string name="profile_userhandle">User Handle</string>
+  <string name="profile_check">Check</string>
+  <string name="write_an_email">Write an email</string>
+  <string name="ask_mymoney_helpdesk">Ask on Mymoney helpdesk</string>
 </resources>
