--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1528,5 +1528,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_earlier">Earlier</string>
   <string name="amount_with_rupee_prefix" translatable="false">\u20B9 <![CDATA[<b>%d</b>]]></string>
   <string name="all_resources">RESOURCES</string>
+  <string name="profile_userhandle">User Handle</string>
+  <string name="profile_check">Check</string>
+  <string name="write_an_email">Write an email</string>
+  <string name="ask_mymoney_helpdesk">Ask on Mymoney helpdesk</string>
 </resources>
 
