--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1531,8 +1531,9 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_userhandle">User Handle</string>
   <string name="profile_check">Check</string>
   <string name="write_an_email">Write an email</string>
-  <string name="ask_mymoney_helpdesk">Ask on Mymoney helpdesk</string>
+  <string name="ask_mymoney_helpdesk">Ask on MyMoney helpdesk</string>
   <string name="top_comment_marked_string">Marked</string>
   <string name="top_comment_string">Top comment</string>
+  <string name="verify_email_address">We have sent a verification link to your email address, please verify it.</string>
 </resources>
 
